# llvm-project

./: CompilersLectureFall2024.md
.devcontainer/: Dockerfile  devcontainer.json
build_tools/: build_cc_dev.sh  build_cc_prod.sh  build_llvm_prod.sh
build_tools/cmake/: CMakePresets.json
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Conversion/LinalgToAXI4MLIR/: AXI4MLIRUtils.h  AccelToAXI4MLIR.h  AccelToRuntime.h  LinalgGenericToAccel.h  LinalgToAXI4MLIR.h  MatmulToAXI4MLIR.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/ExecutionEngine/: AxiUtils.h  RunnerUtils.h
mlir/include/mlir/ExecutionEngine/axi/: api_v0.h  api_v1.h
mlir/include/mlir/IR/: Builders.h  BuiltinAttributeInterfaces.h  BuiltinAttributes.h  BuiltinAttributes.td  BuiltinTypes.h  MLIRContext.h  OpcodeExpr.h  OpcodeExprVisitor.h  OpcodeList.h  OpcodeMap.h
mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/lib/Conversion/LinalgToAXI4MLIR/: AXI4MLIRUtils.cpp  AccelToAXI4MLIR.cpp  AccelToRuntime.cpp  CMakeLists.txt  LinalgGenericToAccel.cpp  LinalgToAXI4MLIR.cpp  MatmulToAXI4MLIR.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/ExecutionEngine/: AxiUtils.cpp  AxiUtilsMock.cpp  AxiUtilsSysc.cpp  CMakeLists.txt  RunnerUtils.cpp
mlir/lib/ExecutionEngine/axi/: CMakeLists.txt  api_v0.cpp  api_v1.cpp  api_v1_sysc.cpp
mlir/lib/IR/: AsmPrinter.cpp  Builders.cpp  BuiltinAttributes.cpp  CMakeLists.txt  MLIRContext.cpp  OpcodeExpr.cpp  OpcodeExprDetail.h  OpcodeList.cpp  OpcodeListDetail.h  OpcodeMap.cpp  OpcodeMapDetail.h
mlir/lib/Parser/: AttributeParser.cpp  CMakeLists.txt  OpcodeParser.cpp  Parser.h  TokenKinds.def
mlir/test/: CMakeLists.txt
mlir/test/CompilersLectureFall2024/: affine-unroll.mlir  jit-e2e-sgemm-naive-codegen.sh  lower-affine.mlir  lower-linalg.mlir  mlir-translate.ll  mlir-translate.mlir
mlir/test/Transforms/: canonicalize.mlir
mlir/test/axi4mlir-runner/: accel-dialect.mlir  accel-to-runtime.mlir  axi_v1_data_copy.mlir  codegen-for-matmul.mlir  generic-to-accel-options.mlir  generic-to-accel.mlir  matmul-runner.mlir  matmul.mlir  matmul_accelerator_v1_naive.mlir  opcde-map-roundtrip.mlir  opcode-map-roundtrip.mlir  run-matmul-v1accel.mlir
mlir/test/axi4mlir-runner/accelerators/: matmul-v1.mlir  matmul-v2-t1.mlir  matmul-v2-t2.mlir  matmul-v2-t3.mlir  matmul-v4-t1.mlir
mlir/test/mlir-cpu-runner/: axi_sgemm_naive_codegen_v1.mlir  axi_v1.mlir  axi_v1_data_copy.mlir
mlir/test/mlir-opt/: commandline.mlir
(+25 files in other folders)
